--- a/qna.ipynb
+++ b/qna.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDO1Gn2gASopPHw+JlryTa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +27,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "7KpjAFzT8ggf"
+        "id": "7KpjAFzT8ggf",
+        "outputId": "75995099-697f-4b21-9cd2-982b3bf9bc64",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": ["test"]
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "test\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('test')"
+      ]
     }
   ]
 }
